# python-project-lvl3

./: Makefile  README.md  logger.cfg  mypy.ini  pyproject.toml
.github/workflows/: main.yml
page_loader/: __init__.py  errors.py  http.py  loader.py  localizer.py  logger.py  name.py  names.py  net.py  parsed_url.py  parser.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_loader.py  test_localizer.py
tests/fixtures/: file_path_img_expect.txt  file_path_res_expect.txt  file_path_res_hexlet_expect.txt  hexlet_case.html  img_test.html  img_test_expect.html  res_test_expect.html  test.html  url_imgs.txt  url_res.txt  url_res_hexlet.txt
tests/fixtures/page_with_resources/: img_res_file_path_expect.txt  img_urls.txt  test.html  test_expect.html  text_res_file_path_expect.txt  text_urls.txt  urls.txt
