[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vcslav-v <vcslav.v@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.800"
pytest = "^6.2.2"
requests-mock = "^1.8.0"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
